Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <a href="https://david-dm.org/merencia/node-cron"><img src="https://david-dm.org/merencia/node-cron.svg" alt="Dependency Status"></a>
 <a href="https://david-dm.org/merencia/node-cron#info=devDependencies"><img src="https://david-dm.org/merencia/node-cron/dev-status.svg" alt="devDependency Status"></a></p>
 
-<p>The node-cron module is tiny task scheduler in pure JavaScrip for node.js based on <a href="https://www.gnu.org/software/mcron/manual/html_node/Crontab-file.html">GNU crontab</a>. This module allows you to schedule task in node.js using full crontab syntax.</p>
+<p>The node-cron module is tiny task scheduler in pure JavaScript for node.js based on <a href="https://www.gnu.org/software/mcron/manual/html_node/Crontab-file.html">GNU crontab</a>. This module allows you to schedule task in node.js using full crontab syntax.</p>
 
 <h2>
 <a id="getting-started" class="anchor" href="#getting-started" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Getting Started</h2>
